<resources>
    <string name="app_name">AzureAPP</string>
    <string name="title_home">Home</string>
    <string name="title_resource">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">请输入有效的电子邮件地址、电话号码或Skype用户名</string>
    <string name="invalid_password">你的密码不正确。如果你不记得记得密码，请立即进行重置</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_base">DataBaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for vm details -->
    <string name="ip_default">***************</string>
    <string name="subscription_default_name">****</string>
    <string name="subscription_default_id">************************</string>
    <string name="stop">停止</string>
    <string name="restart">重启</string>
    <string name="start">启动</string>
    <string name="delete">删除</string>
    <string name="allResources">所有资源</string>
    <string name="resourceSearchHint">搜索名称、类型或标记</string>
    <string name="resources_search_cancel">取消</string>
    <string name="mainPage">主页</string>
    <string name="azureService">Azure服务</string>
    <string name="vm">虚拟机</string>
    <string name="sql">SQL数据库</string>
    <string name="serviceCondition">服务运行状况</string>
    <string name="subscription">订阅</string>
    <string name="notification">通知</string>
    <string name="account">账户</string>
    <string name="alert">警报</string>
    <string name="service_running_condition">资源运行状况</string>
    <string name="azureAccount">Azure账户</string>
    <string name="ad1">从 Azure 免费试用版开始</string>
    <string name="ad2">管理 Azure Active Directory</string>
    <string name="access_student_right">访问学生权益</string>
    <string name="resourceGroup">资源组</string>
    <string name="ServerName">服务器名</string>
    <string name="maxSizeBytes">最大字节数</string>
    <string name="createTime">创建时间</string>
    <string name="dbName">数据库名</string>
    <string name="id">数据库ID</string>
    <string name="stop_going">停止 正在进行</string>
    <string name="start_going">启动 正在进行</string>
    <string name="restart_going">重启 正在进行</string>
    <string name="delete_going">删除 正在进行</string>
    <string name="delete_db_going">删除 正在进行</string>
    <string name="log">日志</string>
    <string name="index">指标</string>
</resources>